--- a/app/src/main/res/drawable/bg_item_detail_btn_selector.xml
+++ b/app/src/main/res/drawable/bg_item_detail_btn_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="#f8f8f8"/>
+            <solid android:color="@color/list_divider_line_color_f5f6ff"/>
             <corners android:bottomLeftRadius="5dp"
                      android:bottomRightRadius="5dp"/>
         </shape>
