--- a/app/src/main/res/layout/dialog_sub_item_detail.xml
+++ b/app/src/main/res/layout/dialog_sub_item_detail.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="240dp"
-    android:background="@drawable/bg_dialog_backup"
-    android:minHeight="240dp">
+    android:layout_width="320dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/bg_dialog_backup">
 
     <TextView
         android:id="@+id/dialog_sub_item_detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="29dp"
-        android:layout_marginRight="29dp"
-        android:layout_marginTop="32dp"
-        android:textColor="#333333"
-        android:textSize="18sp"/>
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="21dp"
+        android:textColor="@color/black_70"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        tools:text="photo"/>
 
     <TextView
         android:id="@+id/dialog_sub_item_detail_message1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_sub_item_detail_title"
-        android:layout_marginLeft="29dp"
-        android:layout_marginRight="29dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:text="message1"
-        android:layout_marginTop="16dp"
-        android:textColor="#666666"
+        android:layout_marginTop="24dp"
+        android:textColor="@color/black_70"
         android:textSize="14sp"/>
 
     <TextView
@@ -33,10 +36,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_sub_item_detail_message1"
-        android:layout_marginLeft="29dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:text="message2"
         android:layout_marginTop="8dp"
-        android:textColor="#666666"
+        android:textColor="@color/black_70"
         android:textSize="14sp"/>
 
     <TextView
@@ -44,54 +48,55 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_sub_item_detail_message2"
-        android:layout_marginLeft="29dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
-        android:textColor="#666666"
+        android:textColor="@color/black_70"
         android:text="message3"
         android:textSize="14sp"/>
 
     <LinearLayout
         android:id="@+id/dialog_sub_item_detail_btn_group"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
+        android:layout_width="320dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="13dp"
         android:orientation="horizontal">
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/dialog_sub_item_detail_btn_cancel"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:background="@drawable/bg_item_detail_btn_selector"
             android:gravity="center"
             android:text="@string/common_cancel"
-            android:textColor="#999999"
-            android:textSize="14sp"/>
-
-        <View
-            android:layout_width="1px"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:background="#cccccc"/>
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="9dp"
+            android:paddingBottom="9dp"
+            android:textStyle="bold"
+            android:layout_marginRight="8dp"
+            android:textColor="@color/black_70"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/dialog_sub_item_detail_btn_view"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:background="@drawable/bg_item_detail_btn_selector"
             android:gravity="center"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="9dp"
+            android:paddingBottom="9dp"
+            android:textStyle="bold"
+            android:layout_marginRight="8dp"
             android:text="@string/common_view"
-            android:textColor="#0083ff"
-            android:textSize="14sp"/>
+            android:textColor="#FF39BDAC"
+            android:textSize="16sp"/>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_alignBottom="@id/dialog_sub_item_detail_btn_group"
-        android:layout_marginLeft="29dp"
-        android:layout_marginBottom="61dp"
-        android:layout_marginRight="29dp"
-        android:background="#eeeeee"/>
-</RelativeLayout>
+</LinearLayout>
