--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -80,4 +80,7 @@
     <color name="title_dark_gray">#70000000</color>
     <color name="title_light_gray">#40000000</color>
     <color name="tip_gray">#40000000</color>
+
+    <color name="sa">#0083ff</color>
+    <color name="aaa">#FF8517</color>
 </resources>
