--- a/app/src/main/res/layout/view_tip.xml
+++ b/app/src/main/res/layout/view_tip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -43,6 +43,40 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_close"/>
 
+    <ImageView
+        android:id="@+id/view_tip_setting"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_toLeftOf="@id/view_tip_close"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_setting"/>
+
+    <FrameLayout
+        android:id="@+id/dialog_stop_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view_tip_setting"
+        android:layout_alignRight="@id/view_tip_setting"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:background="@drawable/bg_popup_window">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:layout_gravity="center"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textColor="@color/black_70"
+            android:textSize="@dimen/h4_14"
+            android:text="@string/common_stop"/>
+
+    </FrameLayout>
+
+
     <TextView
         android:id="@+id/view_tip_btu"
         android:layout_width="match_parent"
@@ -58,4 +92,4 @@
         android:textSize="@dimen/h3_16"
         android:textStyle="bold"
         tools:text="Manage Your Files"/>
-</merge>
+</RelativeLayout>
