--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -6,20 +6,263 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <GridView
-        android:id="@+id/gv_main_category"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
-        android:numColumns="3"
-        android:verticalSpacing="3dp"
-        android:horizontalSpacing="3dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"/>
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_photo"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_photo"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_photo"/>
+
+        </FrameLayout>
+
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_video"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_video"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_video"/>
+
+        </FrameLayout>
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_app"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_app"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_app"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_apps"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginRight="9dp"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_music"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_music"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_music"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_music"/>
+
+        </FrameLayout>
+
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_doc"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_doc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_doc"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_doc"/>
+
+        </FrameLayout>
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_zip"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_zip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_zip"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_zip"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginRight="9dp"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_download"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_download"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_download"/>
+
+        </FrameLayout>
+
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_recent"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_recent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_recent"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_recent"/>
+
+        </FrameLayout>
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"/>
+
+        <FrameLayout
+            android:id="@+id/fl_main_category_ad"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_category_item">
+
+            <TextView
+                android:id="@+id/tv_main_category_ad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:drawablePadding="9dp"
+                android:drawableTop="@drawable/ic_main_category_ad"
+                android:textColor="#B2000000"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:text="@string/main_category_item_ad"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
