--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -84,6 +84,7 @@
                 android:layout_height="15dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="16dp"
+                android:singleLine="true"
                 android:gravity="center_vertical"
                 android:text="  "
                 android:textColor="@color/white_70"
