--- a/app/src/main/res/layout/activity_same_file.xml
+++ b/app/src/main/res/layout/activity_same_file.xml
@@ -5,22 +5,12 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     >
-
-    <!--<include-->
-        <!--layout="@layout/common_action_bar_with_search"-->
-        <!--android:radius="4dp"-->
-        <!--/>-->
     <com.jb.filemanager.ui.view.SearchTitleView
         android:id="@+id/search_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
         />
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:background="@drawable/main_shadow"/>
 
     <FrameLayout
         android:id="@+id/fl_file_list_container"
@@ -28,8 +18,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/white">
-
-        <ExpandableListView
+        <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
             android:id="@+id/elv_same_file_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -40,8 +29,13 @@
             android:listSelector="@android:color/transparent"
             android:scrollbars="none"
             >
-        </ExpandableListView>
+        </com.jb.filemanager.ui.widget.FloatingGroupExpandableListView>
+        <View
+            android:id="@+id/shadow"
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
 
+            android:background="@drawable/main_shadow"/>
         <com.jb.filemanager.ui.widget.BottomOperateBar
             android:id="@+id/bottom_operate_bar_container"
             android:layout_width="match_parent"
