--- a/app/src/main/res/layout/dialog_extract_error.xml
+++ b/app/src/main/res/layout/dialog_extract_error.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/white_2_dp_corner_bg">
 
         <TextView
+            android:id="@+id/tv_dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
@@ -41,6 +42,7 @@
             android:textSize="16dp"/>
 
         <TextView
+            android:id="@+id/tv_retry_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
